--- a/nextjs_space/.env
+++ b/nextjs_space/.env
@@ -1,6 +1,8 @@
-DATABASE_URL="postgresql://role_4bbf62afd:8BzBkXNKaidv14_Wahw4tI6KBmZw2O5U@db-4bbf62afd.db003.hosteddb.reai.io:5432/4bbf62afd?connect_timeout=15"
+DATABASE_URL='postgresql://role_4bbf62afd:8BzBkXNKaidv14_Wahw4tI6KBmZw2O5U@db-4bbf62afd.db003.hosteddb.reai.io:5432/4bbf62afd?connect_timeout=15'
 AWS_PROFILE=hosted_storage
 AWS_REGION=us-west-2
 AWS_BUCKET_NAME=abacusai-apps-6373f18c5e2dbefa3aa7c051-us-west-2
 AWS_FOLDER_PREFIX=17177/
-NEXTAUTH_SECRET="0Nd3DmHCLKJHezhSSwAwi5iRi2sRghrr"
+NEXTAUTH_SECRET=0Nd3DmHCLKJHezhSSwAwi5iRi2sRghrr
+GOOGLE_CLIENT_ID=YOUR_GOOGLE_CLIENT_ID_HERE
+GOOGLE_CLIENT_SECRET=YOUR_GOOGLE_CLIENT_SECRET_HERE
